validate field average